# election

./: .env.prod.example  .gitignore  CLAUDE.md  CRITICAL_REVIEW.md  Makefile  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: test.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240101_000000_initial_phase1_models.py  20240102_000000_add_task_models.py  20240103_000000_add_approval_calendar_models.py  20240104_000000_add_row_level_security.py  20240105_000000_add_invitations_table.py  20240106_000000_add_compound_indexes.py  20240107_000000_add_department_hierarchy_check.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  approvals.py  auth.py  boards.py  calendar.py  campaigns.py  invitations.py  members.py  router.py  tasks.py
backend/app/core/: __init__.py  cookies.py  csrf.py  encryption.py  file_validation.py  logging.py  redis.py  scheduler.py  security.py  transaction.py
backend/app/models/: __init__.py  approval.py  base.py  campaign.py  department.py  google_calendar.py  invitation.py  membership.py  role.py  task.py  user.py
backend/app/schemas/: __init__.py  admin.py  approval.py  auth.py  base.py  campaign.py  department.py  google_calendar.py  membership.py  role.py  task.py  user.py
backend/app/services/: approval_service.py  auth_service.py  campaign_service.py  email_service.py  google_auth_service.py  google_calendar_service.py  task_service.py  token_blacklist.py
backend/tests/: __init__.py  conftest.py  test_approval_expiry.py  test_authorization.py  test_concurrency.py  test_config_security.py  test_rls_isolation.py
backend/tests/api/v1/: test_approvals.py  test_auth.py  test_calendar.py  test_tasks.py
backend/tests/services/: test_token_blacklist.py
docs/: auth-rbac.md  backup-procedures.md  critical-review-final.md  ports.md  progress.md  uiux-plan.md
frontend/: .dockerignore  .env.example  .gitignore  DESIGN_SYSTEM.md  Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  (+4 more)
(+80 files in other folders)
